Add armor materials to the book
Due to when you gain access to armor, and the fact that tier 1 is so weird, tier 1 is merged with tier 2 in puny melting
In the encyclopedia, all 4 tiers are in 1 section as we were starting to get too many sections. Ended up merging the melee/harvest and raged materials into single sections as well

As part of this commit, deleted the deprecated material section transformers from various books, no longer needed
In addition, cleaned up quite a bit of material page code, should make it a bit faster